# Miresga

./: .gitmodules  README.md
Backend/: Makefile  egress_tc.c  ingress_xdp.c  unload.sh  xdp_loader.c
Frontend/: flow_data.hpp  main.cpp  meson.build  my_config.hpp
Frontend/config/: config.json  dpdk.json
Frontend/script/: teardown.sh  tearup.sh
Frontend/subprojects/entry_controller/: entry_controller.cpp  entry_controller.hpp  meson.build
Frontend/subprojects/pkt_processor/: meson.build  pkt_processor.cpp  pkt_processor.hpp
Frontend/subprojects/rule_controller/: meson.build  rule_controller.cpp  rule_controller.hpp
Switch/control_plane/: Makefile
Switch/control_plane/include/: client.h  controller.h
Switch/control_plane/src/: client.c  controller.c  main.c
Switch/data_plane/: config.p4  deparser.p4  headers.p4  l7lb_switch.p4  parser.p4
